////////////////////// e2ap-commondatatypes.proto //////////////////////
// Protobuf generated from /e2ap-v01.00.00.asn by asn1c-0.9.29
// E2AP-CommonDataTypes { iso(1) identified-organization(3) dod(6) internet(1) private(4) enterprise(1) 53148 e2(1) version1(1) e2ap(1) e2ap-CommonDataTypes(3) }

syntax = "proto3";

package e2ap_v01_00_00_asn.v1;

import "validate/v1/validate.proto";

// enumerated from e2ap-v01.00.00.asn:1292
enum Criticality {
    CRITICALITY_REJECT = 0;
    CRITICALITY_IGNORE = 1;
    CRITICALITY_NOTIFY = 2;
};

// enumerated from e2ap-v01.00.00.asn:1294
enum Presence {
    PRESENCE_OPTIONAL = 0;
    PRESENCE_CONDITIONAL = 1;
    PRESENCE_MANDATORY = 2;
};

// enumerated from e2ap-v01.00.00.asn:1300
enum TriggeringMessage {
    TRIGGERING_MESSAGE_INITIATING_MESSAGE = 0;
    TRIGGERING_MESSAGE_SUCCESSFUL_OUTCOME = 1;
    TRIGGERING_MESSAGE_UNSUCCESSFULL_OUTCOME = 2;
};

// range of Integer from e2ap-v01.00.00.asn:1296
message ProcedureCode {
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 255}];
};

// range of Integer from e2ap-v01.00.00.asn:1298
message ProtocolIeId {
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 65535}];
};
