/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/
syntax = "proto3";

package e2ctypes;

enum ProtocolIE_ID_t {
    ProtocolIE_ID_id_Dummy = 0;
    ProtocolIE_ID_id_Cause = 1;
    ProtocolIE_ID_id_CriticalityDiagnostics = 2;
    ProtocolIE_ID_id_GlobalE2node_ID = 3;
    ProtocolIE_ID_id_GlobalRIC_ID = 4;
    ProtocolIE_ID_id_RANfunctionID = 5;
    ProtocolIE_ID_id_RANfunctionID_Item = 6;
    ProtocolIE_ID_id_RANfunctionIEcause_Item = 7;
    ProtocolIE_ID_id_RANfunction_Item = 8;
    ProtocolIE_ID_id_RANfunctionsAccepted = 9;
    ProtocolIE_ID_id_RANfunctionsAdded = 10;
    ProtocolIE_ID_id_RANfunctionsDeleted = 11;
    ProtocolIE_ID_id_RANfunctionsModified = 12;
    ProtocolIE_ID_id_RANfunctionsRejected = 13;
    ProtocolIE_ID_id_RICaction_Admitted_Item = 14;
    ProtocolIE_ID_id_RICactionID = 15;
    ProtocolIE_ID_id_RICaction_NotAdmitted_Item = 16;
    ProtocolIE_ID_id_RICactions_Admitted = 17;
    ProtocolIE_ID_id_RICactions_NotAdmitted = 18;
    ProtocolIE_ID_id_RICaction_ToBeSetup_Item = 19;
    ProtocolIE_ID_id_RICcallProcessID = 20;
    ProtocolIE_ID_id_RICcontrolAckRequest = 21;
    ProtocolIE_ID_id_RICcontrolHeader = 22;
    ProtocolIE_ID_id_RICcontrolMessage = 23;
    ProtocolIE_ID_id_RICcontrolStatus = 24;
    ProtocolIE_ID_id_RICindicationHeader = 25;
    ProtocolIE_ID_id_RICindicationMessage = 26;
    ProtocolIE_ID_id_RICindicationSN = 27;
    ProtocolIE_ID_id_RICindicationType = 28;
    ProtocolIE_ID_id_RICrequestID = 29;
    ProtocolIE_ID_id_RICsubscriptionDetails = 30;
    ProtocolIE_ID_id_TimeToWait = 31;
    ProtocolIE_ID_id_RICcontrolOutcome = 32;    
}